<resources>
    <string name="app_name">EasePlan</string>

    <!-- ONBOARDING -->
    <string name="logo_desc">Logo image</string>

    <string name="email_in">Enter email address</string>
    <string name="email">Email Address</string>
    <string name="email_asterisk">Email Address*</string>
    <string name="password_in">Enter password</string>
    <string name="password">Password</string>
    <string name="password2">Create a Password</string>
    <string name="password3">Confirm Password</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="login">Login</string>
    <string name="login2">Sign in</string>

    <string name="register_member">Not a member?</string>
    <string name="register">Register</string>
    <string name="register2">Sign up</string>
    <string name="register3">Register now</string>
    <string name="register_create">Create an account to get started</string>

    <string name="fName">First Name</string>
    <string name="fName_asterisk">First Name*</string>
    <string name="lName">Last Name</string>
    <string name="lName_asterisk">Last Name*</string>
    <string name="birthdate">Birth Date</string>
    <string name="address">Address</string>
    <string name="welcome_top">Welcome!</string>

    <!-- LANDING -->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="Developer">Developer</string>
    <string name="Settings">Settings</string>

    <!-- DEFAULT -->
    <string name="land_hero_icon_desc">Icon of hero</string>
    <string name="land_hero_text_big">Nothing here. For now.</string>
    <string name="land_hero_text">Lorem ipsum dolor elit nullam lorem est,</string>
    <string name="land_hero_button">Start a Plan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>