<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DefaultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <ImageView
            android:id="@+id/hero_icon"
            android:layout_width="0dp"
            android:layout_height="165dp"
            android:src="@drawable/empty_image"
            android:contentDescription="@string/land_hero_icon_desc"
            app:layout_constraintTop_toTopOf="@id/guideline_top"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            />

        <TextView
            android:id="@+id/hero_text_big"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/land_hero_text_big"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/hero_icon"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/hero_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/land_hero_text"
            android:textColor="@color/neutral_dark"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/hero_text_big"
            android:gravity="center"
            android:layout_marginHorizontal="95dp"
            android:paddingHorizontal="0dp"
            />

        <Button
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:id="@+id/hero_btn"
            app:icon="@drawable/add"
            app:iconTint="@color/white"
            app:iconSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/land_hero_button"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/hero_text"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
            android:backgroundTint="@color/selected"
            android:paddingHorizontal="18dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>