<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment"
    android:background="@color/neutral_lighter"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_card"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:cardCornerRadius="100dp"
                android:foregroundGravity="center"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="50dp"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginBottom="2dp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/empty_image"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/land_hero_icon_desc"
                    />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                app:dividerInsetStart="25dp"
                app:dividerInsetEnd="25dp"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/profile_card"
                />

            <LinearLayout
                android:id="@+id/layout_fName"
                android:background="@drawable/round_back_white100_10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="40dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/divider_top"
                android:padding="15dp"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fName"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_fName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@null"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/neutral_dark"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_lName"
                android:background="@drawable/round_back_white100_10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="40dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/layout_fName"
                android:padding="15dp"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lName"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_lName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@null"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/neutral_dark"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_email"
                android:background="@drawable/round_back_white100_10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="40dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/layout_lName"
                android:padding="15dp"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@null"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/neutral_dark"
                    />
            </LinearLayout>

            <Button
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="EDIT PROFILE"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/layout_email"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
            android:paddingVertical="13dp"
            android:backgroundTint="@color/selected"
            android:layout_marginHorizontal="40dp"
            />

            <LinearLayout
                android:id="@+id/test2"
                android:background="@color/transparent"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="40dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/layout_email"
                android:padding="15dp"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                android:layout_marginBottom="50dp"
                >
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>