<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".landing.EditProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <!-- FNAME -->
        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            android:id="@+id/filledTextFieldfName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/fName"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/guideline_top"
            android:layout_marginTop="15dp"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
            app:boxStrokeColor="@color/selected"
            app:hintTextColor="@color/selected"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etfName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- LNAME -->
        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            android:id="@+id/filledTextFieldlName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/lName"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/filledTextFieldfName"
            android:layout_marginTop="15dp"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
            app:boxStrokeColor="@color/selected"
            app:hintTextColor="@color/selected"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etlName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- EMAIL -->
        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            android:id="@+id/filledTextFieldEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/filledTextFieldlName"
            android:layout_marginTop="15dp"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
            app:boxStrokeColor="@color/selected"
            app:hintTextColor="@color/selected"
            android:visibility="gone"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="SAVE"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/filledTextFieldEmail"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
            android:paddingVertical="13dp"
            android:backgroundTint="@color/selected"
            android:layout_marginHorizontal="40dp"
            />

        <Button
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="CANCEL"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="@color/error"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/btnEdit"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
            android:paddingVertical="13dp"
            android:layout_marginHorizontal="40dp"
            />

        <LinearLayout
            android:id="@+id/test2"
            android:background="@color/transparent"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="40dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/btnCancel"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            android:layout_marginBottom="50dp"
            >
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>